# pingpong

./: .env.template.phase3  .gitignore  .graphifyignore  AGENTS.md  AUTHENTICATION_CODE.md  BUG_WEBSOCKET_DISCONNECT.md  CLONE_STRATEGY.md  Cargo.toml  EDGE_DETECTION_PROOF.md  FINAL_INTEGRATION.md  HEARTBEAT.md  HFT_DEPLOYMENT_CHECKLIST.md  IDENTITY.md  INTEGRATION.rs  LIVE_TRADING_ANALYSIS.md  LIVE_TRADING_PLAN.md  MEMORY.md  ORDER_EXECUTION_README.md  PATH_TO_PRODUCTION.md  PHASE3_SUMMARY.md  PHASE5_STEP1_IMPLEMENTATION.md  PROOF_OF_WORK.md  STEP2_IMPLEMENTATION.md  STRATEGIES.md  TOOLS.md  TOP_OF_BOOK_MM.md  USER.md  USER_WEBSOCKET_CODE.md  add_edge_debug.py  add_ghost_check.py  add_ghost_check_v2.py  add_ghost_init.py  add_ghost_sim.py  add_ghost_tracking.py  add_latency.py  add_latency2.py  add_latency3.py  add_parser_debug.py  add_rate_limit.py  add_rollover_debug.py  (+197 more)
.openclaw/: workspace-state.json
config/: mcporter.json
graphify-out/: GRAPH_REPORT.md  graph.json
memory/: 2026-03-18-1925.md  2026-03-18-2131.md  2026-03-18-2135.md  2026-03-18-2137.md  2026-03-18-2156.md  2026-03-18-2158.md  2026-03-18-context-config.md  2026-03-18-embedding-setup.md  2026-03-18-instance-discovery.md  2026-03-18-session-start.md  2026-03-18.md  2026-03-19.md  2026-03-20-websocket-reconnect.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-24.md  2026-03-25.md  2026-03-26-jimm-intro.md  2026-03-27-session-start-status.md  2026-03-27.md  2026-03-28-0121.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03-aws-bot-crash.md  (+25 more)
(+39 files in other folders)
